--- a/app/index.html
+++ b/app/index.html
@@ -123,7 +123,7 @@
 					<h2 class="about-me__title">Образование</h2>
 					<ul class="about-me-where">
 						<li class="about-me-where__item learn">
-							<div class="about-me-where__title">Специалист (Автоматизация вычислительных систем). СПЕК </div>
+							<div class="about-me-where__title">Специалист (Автоматизация вычислительных систем). СПЭК </div>
 							<div class="about-me-where__position">Сентябрь 2009 - Июль 2012</div>
 						</li>
 						<li class="about-me-where__item learn">
