--- a/app/index.html
+++ b/app/index.html
@@ -115,11 +115,11 @@
 						</li>
 						<li class="about-me-where__item">
 							<div class="about-me-where__title">ОАО "Воля"</div>
-							<div class="about-me-where__position">Сборщик металлоконструкций</div>
+							<div class="about-me-where__position last-teach">Сборщик металлоконструкций</div>
 						</li>
 					</ul>
 				</section>
-				<section class="about-me">
+				<section class="about-me last">
 					<h2 class="about-me__title">Образование</h2>
 					<ul class="about-me-where">
 						<li class="about-me-where__item learn">
@@ -130,7 +130,7 @@
 							<div class="about-me-where__title">Студент(Бакалавр) (Бизнес-информатика). МУПОЧ</div>
 							<div class="about-me-where__position">Сентябрь 2013 - по настоящее время</div>
 						</li>
-						<li class="about-me-where__item course">
+						 <li class="about-me-where__item course">
 							<div class="about-me-where__title">Курсы Loftshool.ru</div>
 							<div class="about-me-where__position">Сентябрь 2015 - по настоящее время</div>
 						</li>
