--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
 	<link rel="stylesheet" href="bower/normalize.css/normalize.css">
 	<!-- CSS -->
  	<link rel="stylesheet" href="css/main.css"> 
+ 	<link rel="stylesheet" href="css/about-me.css">
 	<!-- Modernizr -->
 	<script src="bower/modernizer/modernizr.js"></script>
 </head>
@@ -50,8 +51,8 @@
 				<aside class="sidebar">
 					<nav class="nav">
 						<ul class="nav-list">
-							<li class="nav-list__item"><a class="nav-list__link active" href="#">Обо мне</a></li>
-							<li class="nav-list__item"><a class="nav-list__link" href="#">Мои работы</a></li>
+							<li class="nav-list__item"><a class="nav-list__link active" href="index.html">Обо мне</a></li>
+							<li class="nav-list__item"><a class="nav-list__link" href="my_works.html">Мои работы</a></li>
 							<li class="nav-list__item"><a class="nav-list__link" href="#">Связаться со мной</a></li>
 						</ul>
 					</nav>
@@ -141,7 +142,7 @@
 	<footer class="page-footer">
 		<div class="container">
 			<div class="page-footer__copyright">
-				<div class="page-footer__text">&copy2015. Это мой сайт, пожалуйста, не копируйте и не воруйте его</div>
+				<div class="page-footer__text">&copy2015;. Это мой сайт, пожалуйста, не копируйте и не воруйте его</div>
 				<div class="page-footer__container-lock">
 					<a href="#" class="page-footer__lock">Выполнить вход</a>
 				</div>
