--- a/app/my_works.html
+++ b/app/my_works.html
@@ -52,8 +52,8 @@
 					<nav class="nav">
 						<ul class="nav-list">
 							<li class="nav-list__item"><a class="nav-list__link" href="index.html">Обо мне</a></li>
-							<li class="nav-list__item"><a class="nav-list__link active" href="#">Мои работы</a></li>
-							<li class="nav-list__item"><a class="nav-list__link" href="#">Связаться со мной</a></li>
+							<li class="nav-list__item"><a class="nav-list__link active" href="my_works.html">Мои работы</a></li>
+							<li class="nav-list__item"><a class="nav-list__link" href="contact.html">Связаться со мной</a></li>
 						</ul>
 					</nav>
 				<section>
@@ -166,7 +166,7 @@
 						</div>
 					</form>
 				</div>
-				<a href="#" class="popup__close">x</a>
+				<a href="#" class="popup__close">×</a>
 			</div>
 	<script src="bower/jquery/dist/jquery.min.js"></script>
 	<script src="bower/bPopup/jquery.bpopup.min.js"></script>
