--- a/app/index.html
+++ b/app/index.html
@@ -53,7 +53,7 @@
 						<ul class="nav-list">
 							<li class="nav-list__item"><a class="nav-list__link active" href="index.html">Обо мне</a></li>
 							<li class="nav-list__item"><a class="nav-list__link" href="my_works.html">Мои работы</a></li>
-							<li class="nav-list__item"><a class="nav-list__link" href="#">Связаться со мной</a></li>
+							<li class="nav-list__item"><a class="nav-list__link" href="contact.html">Связаться со мной</a></li>
 						</ul>
 					</nav>
 				<section>
