--- a/app/index.html
+++ b/app/index.html
@@ -144,7 +144,7 @@
 			<div class="page-footer__copyright">
 				<div class="page-footer__text">&copy2015;. Это мой сайт, пожалуйста, не копируйте и не воруйте его</div>
 				<div class="page-footer__container-lock">
-					<a href="#" class="page-footer__lock">Выполнить вход</a>
+					<a href="login.html" class="page-footer__lock">Выполнить вход</a>
 				</div>
 			</div>
 		</div>
