--- a/app/contact.html
+++ b/app/contact.html
@@ -67,7 +67,7 @@
  					</aside>
  					<section class="about-me">
  						<h2 class="contact__title">У вас интеренсый проект? Напишите мне</h2>
- 						<div class="contact__wrap-inner">
+ 						<div class="contact__wrap clearfix">
  							<form action="#" method="post" class="contact__form">
  								<div class="contact__input-wrap">
  									<span class="cotact__text">Имя</span>
@@ -75,18 +75,20 @@
  								</div>
  								<div class="contact__input-wrap ml">
  									<span class="cotact__text">Email</span>
- 									<input type="text" name="" placeholder="Как к вам обращаться" class="contact__input contact__input--area">
+ 									<input type="text" name="" placeholder="Куда мне писать" class="contact__input contact__input--area">
  								</div>
  								<div class="contact__input-wrap">
  									<span class="cotact__text">Сообщение</span>
  									<textarea name="" placeholder="Кратко в чем суть" class="contact__input contact__input-textarea"></textarea>
  								</div>
- 								<div class="contact__capcha"></div>
- 								<input type="submit" class="contact__submit" value="Отправить">
- 								<input type="reset" class="contact__submit" value="Очистить">
-
+ 								<div class="contact__capcha">
+ 									<span class="cotact__text">Введите код, указаный на картинке</span>
+ 									<div class="contact__capcha-img">Здесь будет капча</div>
+ 									<input type="text" name="" placeholder="Введите код" class="contact__input contact__input--capcha">
+ 								</div>
+ 								<input type="submit" class="contact__button contact__button--submit" value="Отправить">
+ 								<input type="reset" class="contact__button contact__button--reset" value="Очистить">
  							</form>
- 							
  						</div>
  					</section>
  				</div>
@@ -96,7 +98,7 @@
  					<div class="page-footer__copyright">
  						<div class="page-footer__text">&copy2015. Это мой сайт, пожалуйста, не копируйте и не воруйте его</div>
  						<div class="page-footer__container-lock">
- 							<a href="#" class="page-footer__lock">Выполнить вход</a>
+ 							<a href="login.html" class="page-footer__lock">Выполнить вход</a>
  						</div>
  					</div>
  				</div>
