--- a/app/my_works.html
+++ b/app/my_works.html
@@ -168,7 +168,7 @@
 				</div>
 				<a href="#" class="popup__close">×</a>
 			</div>
-	<script src="bower/jquery/dist/jquery.min.js"></script>
+	<script src="bower/jquery/jquery.min.js"></script>
 	<script src="bower/bPopup/jquery.bpopup.min.js"></script>
 	<script src="bower/jquery.easing/js/jquery.easing.min.js"></script>
 	<script src="js/main.js"></script>
