--- a/app/index.html
+++ b/app/index.html
@@ -73,8 +73,7 @@
 								<img class="about-me__img-inner"src="img/avatar.jpg" alt="Фотография">
 							</div>
 						</div>
-						<div class="about-me-info">
-							<ul class="about-me-info-list">
+							<ul class="about-me-info-list clearfix">
 								<li class="about-me-info-list__item clearfix">
 									<div class="about-me-info-list__name">Меня зовут:</div>
 									<div class="about-me-info-list__value">Рощин Максим Вячеславович</div>
@@ -104,7 +103,6 @@
 									</div>
 								</li>
 							</ul>
-						</div>
 					</div>
 				</section>
 				<section class="about-me">
