--- a/app/login.html
+++ b/app/login.html
@@ -43,7 +43,7 @@
 						<input  name="" class="auth__form-input" type="text" placeholder="Введите пароль">
 					</div>
 				</div>
-				<div class="auth__form-data">
+				<div class="auth__form-data submit">
 					<input type="submit" class="auth__form-submit" value="Войти">
 				</div>
 			</form>
