--- a/app/contact.html
+++ b/app/contact.html
@@ -13,6 +13,7 @@
 	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
 	<!-- Bower CSS -->
 	<link rel="stylesheet" href="bower/normalize.css/normalize.css">
+	<link rel="stylesheet" href="bower/qtip2/jquery.qtip.css">
 	<!-- CSS -->
 	<link rel="stylesheet" href="css/main.css"> 
 	<link rel="stylesheet" href="css/contact.css">
@@ -68,25 +69,25 @@
  					<section class="about-me">
  						<h2 class="contact__title">У вас интеренсый проект? Напишите мне</h2>
  						<div class="contact__wrap clearfix">
- 							<form action="#" method="post" class="contact__form">
+ 							<form  class="form">
  								<div class="contact__input-wrap">
  									<span class="cotact__text">Имя</span>
- 									<input type="text" name="" placeholder="Как к вам обращаться" class="contact__input contact__input--area">
+ 									<input type="text" name="name" qtip-position="left" qtip-content="Вы не ввели имя" placeholder="Как к вам обращаться" class="contact__input contact__input--area">
  								</div>
  								<div class="contact__input-wrap ml">
  									<span class="cotact__text">Email</span>
- 									<input type="text" name="" placeholder="Куда мне писать" class="contact__input contact__input--area">
+ 									<input type="text" name="mail" qtip-position="right" qtip-content="Вы не ввели email" placeholder="Куда мне писать" class="contact__input contact__input--area">
  								</div>
  								<div class="contact__input-wrap">
  									<span class="cotact__text">Сообщение</span>
- 									<textarea name="" placeholder="Кратко в чем суть" class="contact__input contact__input-textarea"></textarea>
+ 									<textarea name="textarea" qtip-content="Что вы от меня хотите?" placeholder="Кратко в чем суть" class="contact__input contact__input-textarea"></textarea>
  								</div>
  								<div class="contact__capcha">
  									<span class="cotact__text">Введите код, указаный на картинке</span>
  									<div class="contact__capcha-img">Здесь будет капча</div>
- 									<input type="text" name="" placeholder="Введите код" class="contact__input contact__input--capcha">
+ 									<input type="text" name="captcha" qtip-position="right" qtip-content="Вы не ввели код" placeholder="Введите код" class="contact__input contact__input--capcha">
  								</div>
- 								<input type="submit" class="contact__button contact__button--submit" value="Отправить">
+ 								<input type="submit"  class="contact__button contact__button--submit" value="Отправить">
  								<input type="reset" class="contact__button contact__button--reset" value="Очистить">
  							</form>
  						</div>
@@ -103,5 +104,10 @@
  					</div>
  				</div>
  			</footer>
+ 			<script src="bower/jquery/jquery.min.js"></script>
+ 			<script src="bower/qtip2/jquery.qtip.js"></script>
+ 			<script src="bower/jquery.placeholder/jquery.placeholder.js"></script>
+ 		 	<script src="js/validation.js"></script>
+ 			<script src="js/contact.js"></script>
  		</body>
  		</html>
