--- a/app/my_works.html
+++ b/app/my_works.html
@@ -74,10 +74,10 @@
  									<div class="galery__img-box">
  										<img class="galery__img-inner"src="img/super-shop.jpg" alt="Картинка сайта">
  										<div class="galery__img-link-wrap">
- 											<a href="http://shop.r96114pw.bget.ru/" target="_blank" class="galery__img-link">подробнее</a>
+ 											<a href="http://supershop.maksdeveloper.ru/" target="_blank" class="galery__img-link">подробнее</a>
  										</div>
  									</div>
- 									<a href="http://shop.r96114pw.bget.ru/" target="_blank" class="galery__link">shop.r96114pw.bget.ru</a>
+ 									<a href="http://supershop.maksdeveloper.ru/" target="_blank" class="galery__link">supershop.maksdeveloper.ru</a>
  									<div class="galery__link-info">Интернет магазин Экзаменационная работа во «Всероссийской Школе Программирования»</div>
  								</li>
  								<li class="galery__list-item">
@@ -146,7 +146,7 @@
  							</div>
  							<div class="form__input form__input-file">
  								<input type="file" name="input-file" class="form__input-file-origin">
- 								<div class="form__input-fake" qtip-content="Вы не выбрали изображение"></div>
+ 								<div class="form__input-fake" placeholder="Загрузи" qtip-content="Вы не выбрали изображение"></div>
  								<div class="form__input-file-icon"></div>
  							</div>
  						</label>
