--- a/app/my_works.html
+++ b/app/my_works.html
@@ -144,9 +144,9 @@
  							<div class="form__title">
  								Картинка проекта
  							</div>
- 							<div class="form__input form__input-file">
+ 							<div class="form__input-file">
  								<input type="file" name="input-file" class="form__input-file-origin">
- 								<div class="form__input-fake" placeholder="Загрузи" qtip-content="Вы не выбрали изображение"></div>
+ 								<input type="text" class="form__input-fake" placeholder="Загрузите изображение" qtip-content="Вы не выбрали изображение">
  								<div class="form__input-file-icon"></div>
  							</div>
  						</label>
