--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Главаная страница</title>
+	<meta name="viewport" content="width=1000">
+	<title>Главная страница</title>
 	<!--SEO -->
 	<meta name="description" content="Loftschool первый выпусной проект">
 	<meta name="keywords" content="Loftschool, homework, выпускной проект №1">
@@ -14,10 +15,14 @@
 	<!-- Bower CSS -->
 	<link rel="stylesheet" href="bower/normalize.css/normalize.css">
 	<!-- CSS -->
+	<!-- build:css css/main.min.css --> 
  	<link rel="stylesheet" href="css/main.css"> 
  	<link rel="stylesheet" href="css/about-me.css">
+ 	<!-- endbuild -->
 	<!-- Modernizr -->
+	<!-- build:js js/_vendors.min.js-->
 	<script src="bower/modernizer/modernizr.js"></script>
+	<!-- endbuild -->
 </head>
 <body>
  		<!--[if lt IE 8]>
@@ -59,8 +64,8 @@
 				<section>
 					<ul class="contacts">
 						<li class="contacts__item contacts__title">Контакты</li>
-						<li class="contacts__item contacts__email"><a class="contacts__link" href="mailto:dyrnoj@bk.ru">dyrnoj@bk.ru</a></li>
-						<li class="contacts__item contacts__phone"><a class="contacts__link" href="tel:79611429537">+79611429537</a></li>
+						<li class="contacts__item contacts__email"><a class="contacts__link" href="mailto:maks_roschin@bk.ru">maks_roschin@bk.ru</a></li>
+						<li class="contacts__item contacts__phone"><a class="contacts__link" href="tel:+79611429537">+79611429537</a></li>
 						<li class="contacts__item contacts__skype"><a class="contacts__link" href="skype:maksfinn">maksfinn</a></li>
 					</ul>
 				</section>
@@ -70,7 +75,7 @@
 					<div class="about-me-body clearfix">
 						<div class="about-me-img">
 							<div class="about-me__img-box">
-								<img class="about-me__img-inner"src="img/avatar.jpg" alt="Фотография">
+								<img class="about-me__img-inner" src="img/avatar.jpg" alt="Фотография">
 							</div>
 						</div>
 							<ul class="about-me-info-list clearfix">
@@ -110,11 +115,11 @@
 					<ul class="about-me-where">
 						<li class="about-me-where__item">
 							<div class="about-me-where__title">ОАО "Мебельная фабрика ЭкоМебель"</div>
-							<div class="about-me-where__position">Сборщик мебели</div>
+							<div class="about-me-where__position">Июнь 2010 - по настоящее время</div>
 						</li>
 						<li class="about-me-where__item">
-							<div class="about-me-where__title">ОАО "Воля"</div>
-							<div class="about-me-where__position last-teach">Сборщик металлоконструкций</div>
+							<div class="about-me-where__title">Фриланс</div>
+							<div class="about-me-where__position last-teach">Август 2015 - по настоящее время</div>
 						</li>
 					</ul>
 				</section>
@@ -122,11 +127,11 @@
 					<h2 class="about-me__title">Образование</h2>
 					<ul class="about-me-where">
 						<li class="about-me-where__item learn">
-							<div class="about-me-where__title">Специалист (Автоматизация вычислительных систем). СПЭК </div>
-							<div class="about-me-where__position">Сентябрь 2009 - Июль 2012</div>
+							<div class="about-me-where__title">Специалист (Техническое обслуживание средств вычислительной техники и компьютерных сетей). СПЭК </div>
+							<div class="about-me-where__position">Сентябрь 2007 - Июль 2011</div>
 						</li>
 						<li class="about-me-where__item learn">
-							<div class="about-me-where__title">Студент(Бакалавр) (Бизнес-информатика). МУПОЧ</div>
+							<div class="about-me-where__title">Бакалавр (Иститут системного анализа и упарвления) (Бизнес-информатика). МУПОЧ</div>
 							<div class="about-me-where__position">Сентябрь 2013 - по настоящее время</div>
 						</li>
 						 <li class="about-me-where__item course">
