--- a/app/my_works.html
+++ b/app/my_works.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Главаная страница</title>
+	<meta name="viewport" content="width=1000">
+	<title>Мои работы</title>
 	<!--SEO -->
 	<meta name="description" content="Loftschool первый выпусной проект">
 	<meta name="keywords" content="Loftschool, homework, выпускной проект №1">
@@ -60,7 +61,7 @@
  						<section>
  							<ul class="contacts">
  								<li class="contacts__item contacts__title">Контакты</li>
- 								<li class="contacts__item contacts__email"><a class="contacts__link" href="mailto:dyrnoj@bk.ru">dyrnoj@bk.ru</a></li>
+ 								<li class="contacts__item contacts__email"><a class="contacts__link" href="mailto:maks_roschin@bk.ru">maks_roschin@bk.ru</a></li>
  								<li class="contacts__item contacts__phone"><a class="contacts__link" href="tel:79611429537">+79611429537</a></li>
  								<li class="contacts__item contacts__skype"><a class="contacts__link" href="skype:maksfinn">maksfinn</a></li>
  							</ul>
@@ -72,33 +73,33 @@
  							<ul class="galery__list">
  								<li class="galery__list-item">
  									<div class="galery__img-box">
- 										<img class="galery__img-inner"src="img/super-shop.jpg" alt="Картинка сайта">
+ 										<img class="galery__img-inner"src="img/super-shop.png" alt="Картинка сайта">
  										<div class="galery__img-link-wrap">
  											<a href="http://supershop.maksdeveloper.ru/" target="_blank" class="galery__img-link">подробнее</a>
  										</div>
  									</div>
  									<a href="http://supershop.maksdeveloper.ru/" target="_blank" class="galery__link">supershop.maksdeveloper.ru</a>
- 									<div class="galery__link-info">Интернет магазин Экзаменационная работа во «Всероссийской Школе Программирования»</div>
+ 									<div class="galery__link-info">Интернет магазин Экзаменационная работа в «Всероссийской Школе Программирования»</div>
  								</li>
  								<li class="galery__list-item">
  									<div class="galery__img-box">
- 										<img class="galery__img-inner"src="img/Site_1.jpg" alt="Картинка сайта">
+ 										<img class="galery__img-inner" src="img/Cooltech.png" alt="Картинка сайта">
  										<div class="galery__img-link-wrap">
- 											<a href="#" class="galery__img-link">подробнее</a>
+ 											<a href="http://shop.maksdeveloper.ru/" target="_blank" class="galery__img-link">подробнее</a>
  										</div>
  									</div>
- 									<a href="#" class="galery__link">site.ru</a>
- 									<div class="galery__link-info">Информация о проекте 1 превью 2 строки...</div>
+ 									<a href="http://shop.maksdeveloper.ru/" target="_blank" class="galery__link">shop.maksdeveloper.ru</a>
+ 									<div class="galery__link-info">Страница интернет магазина. Jade, Sass, Compass, Сustom accordion, Slider UI, Select2, rating change...</div>
  								</li>
  								<li class="galery__list-item">
  									<div class="galery__img-box">
- 										<img class="galery__img-inner"src="img/Site_1.jpg" alt="Картинка сайта">
+ 										<img class="galery__img-inner"src="img/portfolio.png" alt="Картинка сайта">
  										<div class="galery__img-link-wrap">
- 											<a href="#" class="galery__img-link">подробнее</a>
+ 											<a href="http://maksdeveloper.ru" target="_blank" class="galery__img-link">подробнее</a>
  										</div>
  									</div>
- 									<a href="#" class="galery__link">site.ru</a>
- 									<div class="galery__link-info">Информация о проекте 1 превью 2 строки...</div>
+ 									<a href="http://maksdeveloper.ru" target="_blank" class="galery__link">maksdeveloper.ru</a>
+ 									<div class="galery__link-info">Сайт портфолио</div>
  								</li>
  								<li class="galery__list-item">
  									<div class="galery__img-box">
