add my projects

--- a/app/index.html
+++ b/app/index.html
@@ -99,11 +99,15 @@
 									<div class="about-me-info-list__name">Ключевые навыки:</div>
 									<div class="about-me-info-list__value">
 										<ul class="about-me-info-icon">
-											<li class="about-me-info-icon__item">html</li>
+											<li class="about-me-info-icon__item">HTML</li>
 											<li class="about-me-info-icon__item">CSS</li>
-											<li class="about-me-info-icon__item">javascript</li>
-											<li class="about-me-info-icon__item">gulp</li>
-											<li class="about-me-info-icon__item">git</li>
+											<li class="about-me-info-icon__item">JavaScript</li>
+											<li class="about-me-info-icon__item">JQuery</li>
+											<li class="about-me-info-icon__item">Jade</li>
+											<li class="about-me-info-icon__item">Sass</li>
+											<li class="about-me-info-icon__item">Gulp</li>
+											<li class="about-me-info-icon__item">CMS</li>
+											<li class="about-me-info-icon__item">Git</li>
 										</ul>
 									</div>
 								</li>
@@ -119,7 +123,7 @@
 						</li>
 						<li class="about-me-where__item">
 							<div class="about-me-where__title">Фриланс</div>
-							<div class="about-me-where__position last-teach">Август 2015 - по настоящее время</div>
+							<div class="about-me-where__position last-teach">Июль 2015 - по настоящее время</div>
 						</li>
 					</ul>
 				</section>
@@ -131,12 +135,16 @@
 							<div class="about-me-where__position">Сентябрь 2007 - Июль 2011</div>
 						</li>
 						<li class="about-me-where__item learn">
-							<div class="about-me-where__title">Бакалавр (Иститут системного анализа и упарвления) (Бизнес-информатика). МУПОЧ</div>
+							<div class="about-me-where__title">Бакалавр (Иститут системного анализа и управления) (Бизнес-информатика). МУПОЧ</div>
 							<div class="about-me-where__position">Сентябрь 2013 - по настоящее время</div>
 						</li>
 						 <li class="about-me-where__item course">
 							<div class="about-me-where__title">Курсы Loftshool.ru</div>
-							<div class="about-me-where__position">Сентябрь 2015 - по настоящее время</div>
+							<div class="about-me-where__position">Сентябрь 2015 - Ноябрь 2015</div>
+						</li>
+						<li class="about-me-where__item course">
+							<div class="about-me-where__title">Всероссийская школа программирования</div>
+							<div class="about-me-where__position">Июнь 2015 - Август 2015</div>
 						</li>
 					</ul>
 				</section>
