--- a/app/my_works.html
+++ b/app/my_works.html
@@ -103,13 +103,23 @@
  								</li>
  								<li class="galery__list-item">
  									<div class="galery__img-box">
- 										<img class="galery__img-inner"src="img/Site_1.jpg" alt="Картинка сайта">
+ 										<img class="galery__img-inner"src="img/watermark.png" alt="Картинка сайта">
  										<div class="galery__img-link-wrap">
- 											<a href="#" class="galery__img-link">подробнее</a>
+ 											<a href="http://watermark.silverdragoon.ru" target="_blank"  class="galery__img-link">подробнее</a>
  										</div>
  									</div>
- 									<a href="#" class="galery__link">site.ru</a>
- 									<div class="galery__link-info">Информация о проекте 1 превью 2 строки...</div>
+ 									<a href="http://watermark.silverdragoon.ru" class="galery__link">watermark.silverdragoon.ru</a>
+ 									<div class="galery__link-info">Командная разработка приложения - "Watermark generator"</div>
+ 								</li>
+ 								<li class="galery__list-item">
+ 									<div class="galery__img-box">
+ 										<img class="galery__img-inner"src="img/lafoy.png" alt="Картинка сайта">
+ 										<div class="galery__img-link-wrap">
+ 											<a href="http://lafoy.maksdeveloper.ru/" target="_blank"  class="galery__img-link">подробнее</a>
+ 										</div>
+ 									</div>
+ 									<a href="http://lafoy.maksdeveloper.ru/" class="galery__link">lafoy.maksdeveloper.ru</a>
+ 									<div class="galery__link-info">Адаптивная верстка сайта</div>
  								</li>
  								<li class="galery__list-item">
  									<a href="#" class="galery__add-image">
